Deck implementation when player draw a card (gold too)